[tool.poetry]
name = "pycvi-lib"
packages = [
    {include = "pycvi"}
]
version = "0.1.4"
description = "Internal Cluster Validity Indices in python, compatible with time-series data"
authors = ["Natacha, Galmiche <natacha.galmiche@uib.no>"]
readme = "README.md"
homepage = "https://pycvi.readthedocs.io/en/latest/"
repository = "https://github.com/nglm/pycvi"

[tool.poetry.dependencies]

# Core dependencies
python = ">=3.8,<3.12"
aeon = [
    {version = ">=0.7.0", python = ">=3.8,<3.9"},
    {version = ">=0.10.0", python = ">=3.9,<3.12"},
]

# Extra dependencies for "examples" scripts
scikit-learn-extra = {version = "^0.3.0", python = ">=3.8,<3.12", optional = true}
matplotlib = [
    {version = "~3.7", python = ">=3.8,<3.9", optional = true},
    {version = ">=3.8", python = ">=3.9,<3.12", optional = true}
]

# Dev dependencies for testing
[tool.poetry.group.dev.dependencies]
pytest = {version = ">=7.4.0", python = ">=3.8,<3.12"}


[tool.poetry.extras]
examples = ["matplotlib", "scikit-learn-extra"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
