[project]
name = "pycvi-lib"
version = "0.1.7"
description = "Internal Cluster Validity Indices in python, compatible with time-series data"
readme = "README.md"
authors = [
    {name = "Natacha Galmiche", email = "natacha.galmiche@uib.no"}
]
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = ["clustering", "time-series", "internal cluster validity indices", "CVI", "machine learning"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",

    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


requires-python = ">= 3.11,<3.15"

dependencies = [
    "aeon>=1.4.0"
]

[project.urls]
Homepage = "https://pycvi.readthedocs.io/en/latest/"
Documentation = "https://pycvi.readthedocs.io/en/latest/"
Repository = "https://github.com/nglm/pycvi"

[project.optional-dependencies]
examples = [
    "scikit-learn-extra>=0.3.0",
    "matplotlib>=3.10.9",
]

[dependency-groups]

dev = [
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "myst-parser>=4.0.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.7.0",
    "sphinx-togglebutton>=0.4.5",
]

# -------------------------------------------------------
#  ------------------ UV configuration ------------------
# -------------------------------------------------------


[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pycvi"
module-root = ""



